--- a/prepros.config
+++ b/prepros.config
@@ -37,7 +37,8 @@
           "wp-includes",
           "node_modules",
           "Prepros Export",
-          "bower_components"
+          "bower_components",
+          "/src/scss/null.scss"
         ],
         "exceptions": []
       }
@@ -918,6 +919,16 @@
         "file": "css/style.css",
         "config": {
           "customOutput": "css/style.css"
+        }
+      },
+      {
+        "file": "src/scss/null.scss",
+        "config": {
+          "tasks": {
+            "autoprefixer": {
+              "enable": false
+            }
+          }
         }
       },
       {
