feat: add flex to  main

--- a/src/scss/prepros.config
+++ b/src/scss/prepros.config
@@ -37,10 +37,7 @@
           "wp-includes",
           "node_modules",
           "Prepros Export",
-          "bower_components",
-          "/src/scss/null.scss",
-          "/src/scss/ui.scss",
-          "/src/scss/mixins.scss"
+          "bower_components"
         ],
         "exceptions": []
       }
@@ -506,8 +503,7 @@
               "segment": "sass",
               "replaceWith": "css"
             }
-          ],
-          "relativePath": "../css"
+          ]
         }
       },
       "less": {
@@ -918,39 +914,7 @@
     },
     "files": [
       {
-        "file": "css/style.css",
-        "config": {
-          "customOutput": "css/style.css"
-        }
-      },
-      {
-        "file": "src/scss/mixins.scss",
-        "config": {
-          "tasks": {
-            "autoprefixer": {
-              "enable": false
-            }
-          }
-        }
-      },
-      {
-        "file": "src/scss/null.scss",
-        "config": {
-          "tasks": {
-            "autoprefixer": {
-              "enable": false
-            }
-          }
-        }
-      },
-      {
-        "file": "src/scss/style.scss",
-        "config": {
-          "customOutput": "css/style.css"
-        }
-      },
-      {
-        "file": "src/scss/ui.scss",
+        "file": "ui.scss",
         "config": {
           "tasks": {
             "autoprefixer": {
