--- a/prepros.config
+++ b/prepros.config
@@ -70,7 +70,8 @@
           "*.coffee",
           "*.kit",
           "*.turf",
-          "*.ts"
+          "*.ts",
+          "/css/style.css"
         ],
         "exceptions": []
       }
@@ -920,7 +921,12 @@
       {
         "file": "css/style.css",
         "config": {
-          "customOutput": "css/style.css"
+          "customOutput": "css/style.css",
+          "tasks": {
+            "minify-css": {
+              "enable": false
+            }
+          }
         }
       },
       {
