feat: add header html

--- a/prepros.config
+++ b/prepros.config
@@ -818,13 +818,14 @@
         ],
         "output": {
           "extension": ".html",
-          "type": "REPLACE_SEGMENTS",
+          "type": "SOURCE_RELATIVE",
           "segments": [
             {
               "segment": "turf",
               "replaceWith": "html"
             }
-          ]
+          ],
+          "relativePath": "../"
         }
       },
       "typescript": {
