--- a/prepros.config
+++ b/prepros.config
@@ -214,7 +214,7 @@
       },
       "dart-sass": {
         "indentType": "space",
-        "allowWildcardImports": false,
+        "allowWildcardImports": true,
         "indentWidth": 2,
         "linefeed": "lf",
         "sourceMap": false
@@ -348,7 +348,7 @@
       },
       "node-sass": {
         "indentType": "space",
-        "allowWildcardImports": false,
+        "allowWildcardImports": true,
         "indentWidth": 2,
         "linefeed": "lf",
         "outputStyle": "expanded",
@@ -931,8 +931,11 @@
         }
       },
       {
-        "file": "src/scss/mixins.scss",
+        "file": "src/scss/header.scss",
         "config": {
+          "autoCompile": false,
+          "compileImported": true,
+          "sourceMap": true,
           "tasks": {
             "autoprefixer": {
               "enable": false
@@ -941,8 +944,20 @@
         }
       },
       {
+        "file": "src/scss/mixins.scss",
+        "config": {
+          "tasks": {
+            "autoprefixer": {
+              "enable": false
+            }
+          },
+          "sourceMap": true
+        }
+      },
+      {
         "file": "src/scss/null.scss",
         "config": {
+          "sourceMap": true,
           "tasks": {
             "autoprefixer": {
               "enable": false
@@ -959,12 +974,13 @@
       {
         "file": "src/scss/ui.scss",
         "config": {
+          "autoCompile": false,
           "tasks": {
             "autoprefixer": {
               "enable": false
             }
           },
-          "autoCompile": false
+          "sourceMap": true
         }
       }
     ]
