--- a/prepros.config
+++ b/prepros.config
@@ -214,7 +214,7 @@
       },
       "dart-sass": {
         "indentType": "space",
-        "allowWildcardImports": true,
+        "allowWildcardImports": false,
         "indentWidth": 2,
         "linefeed": "lf",
         "sourceMap": false
@@ -348,7 +348,7 @@
       },
       "node-sass": {
         "indentType": "space",
-        "allowWildcardImports": true,
+        "allowWildcardImports": false,
         "indentWidth": 2,
         "linefeed": "lf",
         "outputStyle": "expanded",
@@ -497,7 +497,7 @@
         ],
         "output": {
           "extension": ".css",
-          "type": "REPLACE_SEGMENTS",
+          "type": "SOURCE_RELATIVE",
           "segments": [
             {
               "segment": "scss",
@@ -927,7 +927,8 @@
             "minify-css": {
               "enable": false
             }
-          }
+          },
+          "autoCompile": true
         }
       },
       {
@@ -935,23 +936,18 @@
         "config": {
           "autoCompile": false,
           "compileImported": true,
+          "sourceMap": true
+        }
+      },
+      {
+        "file": "src/scss/mixins.scss",
+        "config": {
           "sourceMap": true,
           "tasks": {
             "autoprefixer": {
               "enable": false
             }
           }
-        }
-      },
-      {
-        "file": "src/scss/mixins.scss",
-        "config": {
-          "tasks": {
-            "autoprefixer": {
-              "enable": false
-            }
-          },
-          "sourceMap": true
         }
       },
       {
@@ -968,6 +964,11 @@
       {
         "file": "src/scss/style.scss",
         "config": {
+          "tasks": {
+            "autoprefixer": {
+              "enable": false
+            }
+          },
           "customOutput": "css/style.css"
         }
       },
@@ -975,12 +976,12 @@
         "file": "src/scss/ui.scss",
         "config": {
           "autoCompile": false,
+          "sourceMap": true,
           "tasks": {
             "autoprefixer": {
               "enable": false
             }
-          },
-          "sourceMap": true
+          }
         }
       }
     ]
