--- a/prepros.config
+++ b/prepros.config
@@ -619,7 +619,7 @@
           },
           {
             "task": "concat-js",
-            "enable": false
+            "enable": true
           },
           {
             "task": "babel",
@@ -627,7 +627,7 @@
           },
           {
             "task": "bundle-js",
-            "enable": false
+            "enable": true
           },
           {
             "task": "minify-js",
@@ -926,6 +926,81 @@
           "tasks": {
             "minify-css": {
               "enable": false
+            }
+          }
+        }
+      },
+      {
+        "file": "src/js/hello.js",
+        "config": {
+          "tasks": {
+            "concat-js": {
+              "enable": true
+            },
+            "bundle-js": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "src/js/main.js",
+        "config": {
+          "tasks": {
+            "concat-js": {
+              "enable": true
+            },
+            "bundle-js": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "src/js/script.js",
+        "config": {
+          "tasks": {
+            "concat-js": {
+              "enable": true
+            },
+            "bundle-js": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "src/js/slick.min.js",
+        "config": {
+          "tasks": {
+            "concat-js": {
+              "enable": true
+            },
+            "bundle-js": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "src/js/slider.js",
+        "config": {
+          "tasks": {
+            "concat-js": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "src/js/vendors.js",
+        "config": {
+          "tasks": {
+            "concat-js": {
+              "enable": true
+            },
+            "bundle-js": {
+              "enable": true
             }
           }
         }
